force-app/main/default/objects/Milestone1_Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Money-In</fullName>
            </value>
            <value>
                <fullName>Money-Out</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>