force-app/main/default/objects/Milestone1_Project__c/fields/Delay_expected_vs_real__c.field-meta.xml
<CustomField>
    <fullName>Delay_expected_vs_real__c</fullName>
    <formula>IF( ISNULL( Real_Go_Live_date__c ) &amp;&amp; TODAY() &gt; Expected_go_live_scope_adopt_Start__c , &quot;Delayed&quot;,
IF(Real_Go_Live_date__c &gt; Expected_go_live_scope_adopt_Start__c , &quot;Go live/ Delayed&quot;,
IF(Real_Go_Live_date__c = Expected_go_live_scope_adopt_Start__c , &quot;Go Live/ On time&quot;, &quot;Go Live/ Ahead Off&quot;)))</formula>
    <label>Delay expected vs. real</label>
    <type>Text</type>
</CustomField>