force-app/main/default/objects/Milestone1_Project__c/fields/Expected_go_live_scope_adopt_end__c.field-meta.xml
<CustomField>
    <fullName>Expected_go_live_scope_adopt_end__c</fullName>
    <label>Expected go live scope adopt (end)</label>
    <type>Date</type>
</CustomField>