force-app/main/default/objects/Milestone1_Project__c/fields/Expected_go_live_scope_adopt_Start__c.field-meta.xml
<CustomField>
    <fullName>Expected_go_live_scope_adopt_Start__c</fullName>
    <label>Expected go live scope adopt (Start)</label>
    <type>Date</type>
</CustomField>