force-app/main/default/objects/Milestone1_Project__c/fields/Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Kickoff__c</fullName>
    <inlineHelpText>What date should this project start?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>