force-app/main/default/objects/Milestone1_Project__c/fields/Real_Go_Live_date__c.field-meta.xml
<CustomField>
    <fullName>Real_Go_Live_date__c</fullName>
    <label>Real Go Live date</label>
    <type>Date</type>
</CustomField>