force-app/main/default/objects/Milestone1_Project__c/fields/UCSA__c.field-meta.xml
<CustomField>
    <fullName>UCSA__c</fullName>
    <description>Resumen de la cantidad de milestones que sean Scope adopt</description>
    <label>UCSA</label>
    <summaryFilterItems>
        <field>Milestone1_Milestone__c.Scope_adopt__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>