force-app/main/default/objects/Milestone1_Project__c/fields/UCSAC__c.field-meta.xml
<CustomField>
    <fullName>UCSAC__c</fullName>
    <description>Cantidad de milestones del tipo scope adopt que ya han sido aceptados por el cliente</description>
    <label>UCSAC</label>
    <summaryFilterItems>
        <field>Milestone1_Milestone__c.Scope_adopt__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Milestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Customer approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>