force-app/main/default/objects/Milestone1_Project__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Classification</fullName>
            </value>
            <value>
                <fullName>Bank Reconciliation</fullName>
            </value>
            <value>
                <fullName>Bank vs Accounting</fullName>
            </value>
            <value>
                <fullName>Cost Control</fullName>
            </value>
            <value>
                <fullName>Debt Control Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Dispersals</fullName>
            </value>
            <value>
                <fullName>ERP vs OS</fullName>
            </value>
            <value>
                <fullName>EUCs</fullName>
            </value>
            <value>
                <fullName>Multiple Payment Methods</fullName>
            </value>
            <value>
                <fullName>Network Acquirer Reconciliation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Transaction Cost Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>