force-app/main/default/objects/Milestone1_Project__c/fields/Use_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use Case Origin</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>