force-app/main/default/objects/Milestone1_Project__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <description>Resumen de la cantidad de milestones que sean Scope adopt</description>
    <label># Use Cases</label>
    <summaryForeignKey>Milestone1_Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>