force-app/main/default/objects/Milestone1_Project__c/recordTypes/Success.recordType-meta.xml
<RecordType>
    <fullName>Success</fullName>
    <active>true</active>
    <label>Success</label>
</RecordType>