force-app/main/default/objects/Milestone1_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Use_Case__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>