force-app/main/default/objects/Milestone1_Project__c/listViews/Presales_Projects.listView-meta.xml
<ListView>
    <fullName>Presales_Projects</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Use_Case__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Project__c.Presales</value>
    </filters>
    <label>Presales Projects</label>
</ListView>