force-app/main/default/objects/Milestone1_Project__c/listViews/Success_View.listView-meta.xml
<ListView>
    <fullName>Success_View</fullName>
    <columns>NAME</columns>
    <columns>Deadline__c</columns>
    <columns>Duration__c</columns>
    <columns>Number_of_Incomplete_Milestones__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Total_Hours_Incurred__c</columns>
    <columns>Total_Hours_Budget__c</columns>
    <columns>Expected_go_live_scope_adopt_Start__c</columns>
    <columns>Expected_go_live_scope_adopt_end__c</columns>
    <filterScope>Everything</filterScope>
    <label>Success View</label>
</ListView>